--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@tabler/icons-react": "^3.31.0",
     "clsx": "^2.1.1",
     "dotted-map": "^2.2.3",
-    "framer-motion": "^12.6.5",
+    "motion": "^12.7.3",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
