--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotted-map": "^2.2.3",
     "motion": "^12.7.3",
     "next": "15.2.4",
+    "ogl": "^1.0.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.2.0"
