--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@tabler/icons-react": "^3.31.0",
     "clsx": "^2.1.1",
     "dotted-map": "^2.2.3",
+    "embla-carousel-react": "^8.6.0",
+    "lenis": "^1.3.1",
     "motion": "^12.7.3",
     "next": "15.2.4",
     "ogl": "^1.0.11",
